[package]
name = "p2d"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
pest = "2.6"
pest_derive = "2.6"
bimap = "0.6"
libc = "0.2.159"
num-bigint = "0.4"
num-traits = "0.2"
clap = { version = "4.3", features = ["derive"] }

[features]
show_progress = []
cache = []
disconnected_components = []
clause_learning = []

default = ["show_progress", "disconnected_components", "clause_learning", "cache"]